# DiskCDAG

./: .gitignore  CMakeLists.txt  LICENSE.TXT  README  User guide to Disk-Graph API v1.0  build-cmd.txt  gcc_Debug.h  gcc_Release.h  sftp-config.json  source_ddg.sublime-workspace
DDGVect/: DDGVect.cbp  DDGVect.layout
cmake/: FindBerkeleyDB_CXX.cmake
include/ddg/analysis/: .DynamicGraph.hxx.swp  CDAG.hxx  CDAGCounter.hxx  DebugStr.hxx  DiskBlockManager.hxx  DiskCDAG.hxx  DiskCache.hxx  DiskGraphNode.hxx  DynInstCounter.hxx  DynamicGraph.hxx  Ids.hxx  InstructionExecutionIds.hxx  LazyGraph.hxx  Trace.hxx
include/ddg/common/: types.hxx
include/ddg/instrument/: Visitors.hxx
lib/analysis/: CMakeLists.txt  DynInstCounter.cxx  DynamicGraph.cxx  Ids.cxx  Trace.cxx
lib/instrument/: CMakeLists.txt  InstrumentDDG.cxx  Visitors.cxx
lib/runtime/: CMakeLists.txt  Runtime.cxx  Runtime.cxx~  TraceCount.cxx  orig_Runtime.cxx
tools/count-loops/: CMakeLists.txt  count-loops.cxx
tools/count-nodes/: CMakeLists.txt  count-nodes.cxx
tools/ddg-parallel/: CMakeLists.txt  ddg-parallel.cxx
tools/ddg-vect/: CMakeLists.txt  LazyPartitionGraph.cxx  LazyPartitionGraph.hxx  TimestampVector.cxx  TimestampVector.hxx  ddg-vect-rt.cxx  ddg-vect.cxx
tools/disk-graph/: CMakeLists.txt  Main.cxx  disk-graph.cxx
tools/dynamic-graph/: .dynamic-graph.cxx.swp  CMakeLists.txt  dynamic-graph.cxx  region-dynamic-graph.cxx  value-flow-graph.cxx
tools/region-dynamic-graph/: CMakeLists.txt  region-dynamic-graph.cxx  region-dynamic-graph.hxx
tools/reuse-analysis/: CMakeLists.txt
tools/reuse-analysis-witv/: CMakeLists.txt
tools/reuse-analysis-witv/include/: ConvexPartitioning.hxx  GraphAnalysis.hxx  MacroDAG.hxx  ReadCDAG.hxx
tools/reuse-analysis-witv/src/: Main.cxx
tools/reuse-analysis/include/: CalculatePebbleCost.hxx  ConvexPartitioning.hxx  GraphNode.hxx  MacroDAG.hxx  ReadCDAG.hxx
tools/reuse-analysis/src/: GraphNode.cxx  Main.cxx
